<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".agregarNombre">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresarNombre"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:hint="@string/nombre" />

    <ProgressBar
        android:id="@+id/pgbCargar"
        android:progress="0"
        android:max="100"
        android:visibility="invisible"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/txtPorcentaje"
        android:visibility="invisible"
        android:text="%"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:onClick="clickGuardar"
        android:padding="10dp"
        android:text="@string/guardar"
        android:textSize="25sp"
        android:textStyle="bold" />
</LinearLayout>